# MIPSCPU

./: .editorconfig  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  GNUmakefile  Info-gnustep.plist.in  Info.plist.in  README.md  build.sh  opcodes.md
.github/workflows/: build.yml
MIPSCPU/: BitRange.h  BitRange.m  InsCond.h  InsCond.m  InsCondTests.m  InsDef.h  InsDef.m  InsOp.h  InsOp.m  Insn.h  Insn.m  MIPSCPU-Info.plist  MIPSCPU.h  MIPSCPU.m  MIPSCSCtx.h  MIPSCSCtx.m  MIPSCtx.h  MIPSCtx.m  NSArray+BitRange.h  NSArray+BitRange.m  NSArray+InsCond.h  NSArray+InsCond.m  NSString+MIPSHelper.h  NSString+MIPSHelper.m  opcodes.plist
MIPSCPU.xcodeproj/: project.pbxproj
MIPSCPU.xcodeproj/project.xcworkspace/xcuserdata/dan.xcuserdatad/: UserInterfaceState.xcuserstate
MIPSCPU.xcodeproj/xcshareddata/xcschemes/: MIPSCPU.xcscheme  MIPSCPUTests.xcscheme
MIPSCPU.xcodeproj/xcuserdata/dan.xcuserdatad/xcschemes/: -[InsCondTests].xcscheme  xcschememanagement.plist
MIPSCPUTests/: BitRangeTests.m  InsCondTests.m  InsDefTests.m  InsOpTests.m  NSArray+BitRangeTests.m  NSArrayBitrangeTests.m
Resources/: Info-gnustep.plist
docker/: linux-build.sh
test-binaries/: README.md  add.c  mips32r5.s  mips32r6.s  mips64r2.s  mips64r6.s
